# nym-surb-attack-eval

./: README.md  docker-compose.yml  graphs.py  graphs2.py  rebuild.sh  test_and_create_graph.sh
docker/api/: Dockerfile  entrypoint.sh  nym-api.conf
docker/attacker/: Dockerfile  entrypoint.sh
docker/attacker/surb_attack/: Cargo.toml
docker/attacker/surb_attack/src/: main.rs
docker/attacker/surb_attack/src/old/: 2main.rs  backup_main.rs
docker/binary_builder/: Dockerfile  entrypoint.sh  handler.rs  mod.rs  requests.rs
docker/client/: Dockerfile  entrypoint.sh
docker/contract_builder/: Dockerfile  entrypoint.sh
docker/contract_uploader/: Dockerfile  entrypoint.sh
docker/gateway/: entrypoint.sh
docker/mixnode/: Dockerfile  entrypoint.sh
docker/validator/: entrypoint.sh
docker/victim/: entrypoint.sh
docker/victim/surb_attack/: Cargo.toml
docker/victim/surb_attack/src/: main.rs
