[package]
name = "surb_attack"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nym-client-websocket-requests = { git = "https://github.com/nymtech/nym", branch = "master" }
nym-sphinx = { git = "https://github.com/nymtech/nym", branch = "master" }